--- a/debian/rules
+++ b/debian/rules
@@ -11,3 +11,14 @@
 
 %:
 	dh $@ 
+
+.PHONY: override_dh_strip
+
+override_dh_strip:
+	dh_strip --dbg-package=vzlogger-dbg
+
+override_dh_auto_install:
+	dh_auto_install --destdir=debian/vzlogger
+
+override_dh_installdocs:
+	dh_installdocs --link-doc=vzlogger
