--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -10,7 +10,7 @@ bin_PROGRAMS = vzlogger
 
 vzlogger_SOURCES = vzlogger.cpp Channel.cpp Config_Options.cpp threads.cpp Buffer.cpp
 vzlogger_SOURCES += Meter.cpp ltqnorm.cpp Obis.cpp Options.cpp Reading.cpp
-vzlogger_SOURCES += exception.cpp local.cpp MeterMap.cpp
+vzlogger_SOURCES += exception.cpp MeterMap.cpp
 
 # Protocols (add your own here)
 vzlogger_SOURCES += \
@@ -44,7 +44,7 @@ endif
 # local interface support
 ####################################################################
 if LOCAL_SUPPORT
-#vzlogger_SOURCES += local.c
+vzlogger_SOURCES += local.cpp
 vzlogger_LDADD += $(DEPS_LOCAL_LIBS)
 AM_CFLAGS += $(DEPS_LOCAL_CFLAGS)
 endif
